# PointCountFM

./: .gitignore  README.md  mkresultdir.py  pyproject.toml
config/: electrons.yaml  muons.yaml  photons.yaml
pointcountfm/: create_dataset.py  energy_sanity_check.py  inference_cond_file.py  inference_cond_file_plot.py  num_points.py  sanity_check.py  sanity_check3.py
