[project]
name = "PointCountFM"
version = "0.2.0"
description = "A conditional flow matching model to generate the number of points per layer in a calorimeter shower"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Thorsten Buss", email = "thorsten.buss@uni-hamburg.de"}
]
keywords = ["machine learning", "flow matching", "particle physics", "pytorch"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "h5py>=3.14,<3.15",
    "matplotlib>=3.10,<3.11",
    "numpy>=2.3,<2.4",
    "PyYAML>=6.0,<6.1",
    "torch>=2.8,<2.9",
    "showerdata>=0.6,<0.7",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1,<8.0.0",
    "pre-commit>=4.5,<5.0.0",
    "ruff>=0.14.13,<0.15.0",
]

[project.urls]
Homepage = "https://github.com/FLC-QU-hep/PointCountFM"
Repository = "https://github.com/FLC-QU-hep/PointCountFM"
Issues = "https://github.com/FLC-QU-hep/PointCountFM/issues"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pointcountfm"]

[tool.ruff]
target-version = "py313"
fix = true

[tool.ruff.lint]
extend-select = ["C4", "I", "SIM", "UP"]
